Fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -33,12 +33,16 @@ label, button {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
 }
+label {
+  float: left;
+  clear: left;
+  width: 105px;
+  text-align: right;
+  margin-right: 10px;
+}
 input {
   color: #232F3E;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-  margin-left: 20px;
-  max-width: 200px;
+  max-width: 230px;
 }
 
 form {
@@ -57,11 +61,16 @@ button {
   font-weight: bold;
 }
 
-input, select {
-  margin-left: 20px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+input, label, select {
   font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.group {
+  margin: 10px;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 
